// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LetterLink renders active letter 1`] = `
<styles__StyledLetterLink
  href="#parade-group-a"
  isActive={true}
  isDisabled={false}
>
  A
</styles__StyledLetterLink>
`;

exports[`LetterLink renders disabled letter 1`] = `
<styles__StyledLetterLink
  isActive={false}
  isDisabled={true}
>
  A
</styles__StyledLetterLink>
`;

exports[`LetterLink renders with default values 1`] = `
<styles__StyledLetterLink
  href="#parade-group-a"
  isActive={false}
  isDisabled={false}
>
  A
</styles__StyledLetterLink>
`;
